--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,14 +1,10 @@
 body {
     display: flex;
     justify-content: center;
-    /* margin: auto; */
-    background-color: #6966f8;
+    background-color: darkblue;
+
 }
 
-nav {
-    background-color: #906590;
-    color:#998ec3;
-}
 
 span {
     display: flex;
@@ -16,40 +12,12 @@ span {
     margin: auto;
 }
 
-
-/* The sidebar menu */
-.sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    color:#1d72ed;
-    background-color: #0c236d;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    font-family: 'Times New Roman', Times, serif;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
   
   /* Style page content */
   .main {
     margin-left: 160px; /* Same as the width of the sidebar */
     padding: 0px 10px;
+  
   }
 
   /* Container holding the image and the text */
@@ -57,7 +25,7 @@ span {
     margin-top: 10px;
     position: relative;
     text-align: center;
-    color: white;
+    color: rgb(45, 112, 133);
   }
   
   /* Bottom left text */
@@ -90,3 +58,76 @@ span {
     position: relative;
   margin: 15px;
   }
+
+
+
+  /* {box-sizing: border-box;} */
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  background-color: #2fa3d1;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  /* display: none; */
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #ad4b4b;
+}
+
+/* When the inputs get focus, do something */
+.form-container {
+  background-color: rgb(30, 113, 190);
+  outline: none;
+  font-family:  'Lucida Sans Unicode';
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: rgb(255, 255, 255);
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: rgb(24, 20, 250);
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
