--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,12 +4,18 @@ body {
     background-color: darkblue;
 
 }
+#main {
+  display: flex;
+  justify-content: center;
+}
+#name {
+  display:flex;
+  justify-content: center;
+}
 
-
-span {
-    display: flex;
-    justify-content: center;
-    margin: auto;
+#search {
+  display: flex;
+  justify-content: space-between;
 }
 
   
@@ -63,71 +69,17 @@ span {
 
   /* {box-sizing: border-box;} */
 
-/* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-  background-color: #2fa3d1;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
-
-/* The popup form - hidden by default */
-.form-popup {
-  /* display: none; */
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width input fields */
-.form-container {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #ad4b4b;
-}
-
-/* When the inputs get focus, do something */
-.form-container {
-  background-color: rgb(30, 113, 190);
-  outline: none;
-  font-family:  'Lucida Sans Unicode';
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #04AA6D;
-  color: rgb(255, 255, 255);
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: rgb(24, 20, 250);
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
+  .search-form{
+    width: 110%;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    align-items: center;
+    padding-left: 70px;
+    padding-right: 130px;
+    flex-wrap: wrap;
+  }
+  .topBar {
+    color: #44cceb;
+    width: 100%;
+  }
