--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -147,3 +147,21 @@ body{
   button:hover, a:hover {
     opacity: 0.7;
   }
+
+  #chat {
+    background-color: #4ac1dc;
+    width:40%;
+    margin-left: 30%;
+    border-radius: 20px;
+  }
+  #sent {
+    background-color: rgb(154, 154, 250) ;
+   margin-left: 55%;
+  }
+
+  p {
+    background-color: rgb(190, 189, 189);
+    /* width: 100px; */
+    width: 45%;
+    border-radius: 10px;
+  }
