--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -149,7 +149,7 @@ body{
   }
 
   #chat {
-    background-color: #48aac1;
+    background-color: #60a4b3;
     width:40%;
     margin-left: 30%;
     border-radius: 20px;
@@ -174,12 +174,13 @@ body{
   }
 
   #form {
-    background-color: rgb(245, 233, 233);
+    background-color: rgb(245, 244, 244);
     height: 500px;
     width: 400px;
     /* margin: auto; */
     border-style:ridge;
-    font-family: cursive;
+    font-family: 'Courier New', Courier, monospace;
+    color: blue;
     /* border:16px; */
   }
 
