--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -49,7 +49,6 @@
 body{ 
     display: flex;
     justify-content: center;
-    background-color: darkblue;
   }
   #main {
     display: flex;
@@ -143,13 +142,31 @@ body{
   
   
   #card {
-    box-shadow: 0 4px 8px 0 rgba(228, 20, 20, 0.2);
-    max-width: 600px;
+    box-shadow: 0 4px 8px 0 rgba(4, 14, 41, 0.2);
+    background-color: rgb(5, 16, 107);
+    max-width: 1500px;
     margin: auto; 
     text-align: center;
-    font-family: monospace;
+    font-family: montserrat;
+    color: white;
+    border-radius: 5px;
+  }
+
+  #card button {
+    background-color: #36cff1;
+    border: none;
+    padding: 5px 32px;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 5px;
+    cursor: pointer;
+    border-radius: 5px;
   }
   
+  #prof {
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0  rgba(42, 224, 191, 0.945);
+  }
   .title {
     color: grey;
     font-size: 18px;
@@ -195,26 +212,7 @@ body{
     border-radius: 10px;
   } 
 
-  #edit {
-    width: 30%;
-    margin-left: 300px;
-    align-items: center;
-    /* display: flex;
-    justify-content: center; */
-  }
-
-  #form {
-    background-color: rgb(245, 244, 244);
-    height: 500px;
-    width: 400px;
-    /* margin: auto; */
-    border-style:ridge;
-    font-family: monospace;
-    color: blue;
-    /* border:16px; */
-  }
-
-  #form span {
+#form span{
     display: flex;
-   justify-content: space-around;
+    justify-content: space-evenly;
   }
