--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -145,12 +145,11 @@ body {
 
 #card {
   box-shadow: 0 4px 8px 0 rgba(4, 14, 41, 0.2);
-  background-color: rgb(5, 16, 107);
   max-width: 1500px;
   margin: auto;
   text-align: center;
   font-family: montserrat;
-  color: white;
+  color: rgb(46, 49, 216);
   border-radius: 5px;
 }
 
@@ -166,8 +165,7 @@ body {
 }
 
 #prof {
-  border-radius: 15px;
-  box-shadow: 0 4px 8px 0 rgba(42, 224, 191, 0.945);
+  box-shadow: 0 4px 8px 0 #10056F;
 }
 .title {
   color: grey;
@@ -219,3 +217,29 @@ a:hover {
   display: flex;
   justify-content: space-evenly;
 }
+
+
+#bk-img {
+height: 600px;
+width: 1200px;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+
+}
+
+#bk-text {
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:  rgb(48, 209, 245);
+  /* -webkit-text-stroke: 1px black; */
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+font-size: larger;
+  /* font-size: large ; */
+  font-family: Arial, Helvetica, sans-serif;
+  }
+
