--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -7,9 +7,9 @@
   height: 100vh;
 }
 
-#root > div > main {
+/* #root > div > main {
   width: auto;
-}
+} */
 
 #root > div > main > div > div > div > fieldset {
   margin: 2px;
@@ -41,15 +41,14 @@
   margin: 0 auto 0 auto;
 }
 
-#root > div > header > div > div > a {
-  padding: 0;
-  width: 128px;
-  height: 80px;
+.MuiIconButton-label {
+  height: 20vh !important;
+  width: 75% !important;
 }
 
-#SokaLogo {
-  width: 100%;
-  height: 100px;
+body > div > div > div > div > div > button {
+  height: 56px !important;
+  transform: translateY(-2px) !important;
 }
 
 #root > div > header > div > div > div > button * {
@@ -57,7 +56,7 @@
 }
 
 #menu-goal > div,
-#menu-experience > div{
+#menu-experience > div {
   top: 216px !important;
 }
 
@@ -65,6 +64,29 @@
 #menu-location > div,
 #menu-radius > div {
   top: 286px !important;
+}
+
+.bts-mui-bt {
+  background-color: #6c63ff;
+  border: #edebfe;
+}
+.bts-mui-bt:hover {
+  background-color: #8883e6;
+}
+
+.loginLinks {
+  color: black;
+}
+.loginLinks:visited {
+  color: black;
+}
+
+.loginLinks:hover {
+  color: #1e2841;
+}
+
+#root > div > main > div > button {
+  color: black;
 }
 
 body {
@@ -85,12 +107,10 @@ body {
   justify-content: space-between;
 }
 
-
 .main {
   margin-left: 160px;
   padding: 0px 10px;
 }
-
 
 .container {
   margin-top: 10px;
@@ -173,7 +193,7 @@ body {
 }
 
 #prof {
-  box-shadow: 0 4px 8px 0 #10056F;
+  box-shadow: 0 4px 8px 0 #10056f;
   float: left;
   margin-left: 90px;
   padding: 80px;
@@ -229,30 +249,23 @@ a:hover {
   justify-content: space-evenly;
 }
 
-
-#bk-img {
-height: 600px;
-width: 1200px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
-
-}
-
 #bk-text {
   text-align: center;
   position: absolute;
-  top: 20%;
+  top: 20vh;
   left: 50%;
   transform: translate(-50%, -50%);
-  color:  rgb(48, 209, 245);
+  color: rgb(48, 209, 245);
   /* -webkit-text-stroke: 1px black; */
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-font-size: larger;
+   /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
+   
+   text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
+
+
+  font-size: larger;
   /* font-size: large ; */
   font-family: Arial, Helvetica, sans-serif;
-  }
+}
 
 #LoginQ span {
   display: flex;
