--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -192,12 +192,12 @@ body {
   border-radius: 5px;
 }
 
-#prof {
+/* #prof {
   box-shadow: 0 4px 8px 0 #10056f;
   float: left;
   margin-left: 90px;
   padding: 80px;
-}
+} */
 .title {
   color: grey;
   font-size: 18px;
@@ -257,10 +257,9 @@ a:hover {
   transform: translate(-50%, -50%);
   color: rgb(48, 209, 245);
   /* -webkit-text-stroke: 1px black; */
-   /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
-   
-   text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
+  /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
 
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);
 
   font-size: larger;
   /* font-size: large ; */
@@ -277,4 +276,65 @@ a:hover {
   float: right;
   padding: 50px;
   margin-right: 90px;
+}
+/* #map {
+  margin-left: 90px;
+  margin-top: 500px;
+} */
+
+#profHeader {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.profBackground {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 200px;
+  width: 100%;
+}
+
+.profPic {
+  position: absolute;
+  top: 100px;
+  left: 40px;
+  border: solid 0.37em white;
+  border-radius: 50%;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 300px 130px;
+  grid-template-columns: 580px 580px 55px;
+  row-gap: 15px;
+  column-gap: 30px;
+}
+
+.item1 {
+  grid-row: 1;
+  border: 2px solid black;
+  border-radius: 25px;
+}
+.item2 {
+  border: 2px solid black;
+  grid-row: 1/3;
+  border-radius: 25px;
+}
+
+.item3 {
+  grid-row: 2;
+  /* border: 2px solid black; */
+  border-radius: 25px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+}
+
+.item4 {
+  /* border: 2px solid black; */
+  grid-row: 4;
+  grid-column: 1/3;
+  border-radius: 25px;
 }
