--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -314,13 +314,25 @@ a:hover {
 
 .item1 {
   grid-row: 1;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   border-radius: 25px;
+  width: 100%;
+  min-height: 290px;
+  margin: auto;
+  box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
+  background: #fff;
+  border-radius: 12px;
 }
 .item2 {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   grid-row: 1/3;
   border-radius: 25px;
+  width: 100%;
+  min-height: 290px;
+  margin: auto;
+  box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
+  background: #fff;
+  border-radius: 12px;
 }
 
 .item3 {
@@ -329,7 +341,13 @@ a:hover {
   border-radius: 25px;
   display: flex;
   justify-content: space-around;
-  margin-top: 40px;
+  align-items: center;
+  width: 100%;
+  min-height: 110px;
+  margin: auto;
+  box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
+  background: #fff;
+  border-radius: 12px;
 }
 
 .item4 {
