--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -173,12 +173,14 @@ body {
 }
 
 #card {
-  margin: auto;
+  margin: 0;
+  grid-row: 2/3;
+  place-self: center;
   text-align: center;
   font-family: montserrat;
   color: rgb(46, 49, 216);
   border-radius: 5px;
-  padding-top: 30px;
+  padding: 3% 0 3% 0;
 }
 
 #card button {
@@ -304,47 +306,55 @@ a:hover {
   border-radius: 50%;
 }
 
-.container {
+.containerGrid {
+  padding: 1% 10% 1% 10%;
   display: grid;
-  grid-template-rows: 300px 130px;
-  grid-template-columns: 580px 580px 55px;
+  grid-template-rows: minmax(auto, 340px) minmax(auto, 130px);
+  grid-template-columns: 1fr 1fr;
   row-gap: 15px;
   column-gap: 30px;
 }
 
-.item1 {
-  grid-row: 1;
-  /* border: 2px solid black; */
-  border-radius: 25px;
+.item1, .item2  {
+  grid-row: 1/2;
   width: 100%;
-  min-height: 290px;
-  margin: auto;
-  box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
-  background: #fff;
-  border-radius: 12px;
-}
-.item2 {
-  /* border: 2px solid black; */
-  grid-row: 1/3;
-  border-radius: 25px;
-  width: 100%;
-  min-height: 290px;
-  margin: auto;
+  height: 100%;
+  margin: 0;
+  padding: 30px 40px 30px 40px;
   box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
   background: #fff;
   border-radius: 12px;
 }
 
+.item2{
+  grid-row: 1/3;
+}
+
+#root > div > main > div > div.containerGrid > div.item1 > div * {
+  padding: 1.6%;
+  margin: 0;
+}
+/* .item2 {
+  border: 2px solid black;
+  grid-row: 1/3;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 30px 40px 30px 40px;
+  box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
+  background: #fff;
+  border-radius: 12px;
+} */
+
 .item3 {
-  grid-row: 2;
-  /* border: 2px solid black; */
-  border-radius: 25px;
+  grid-row: 2/3;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  min-height: 110px;
-  margin: auto;
+  height: 100%;
+  margin: 0;
+  padding: 20px;
   box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
   background: #fff;
   border-radius: 12px;
