--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -112,14 +112,15 @@ body {
   padding: 0px 10px;
 }
 
-.container {
+/* .container {
   margin-top: 10px;
   position: relative;
   text-align: center;
   color: rgb(45, 112, 133);
+  color: black;
   padding-right: 20px;
   padding-left: 60px;
-}
+} */
 
 .bottom-left {
   position: absolute;
@@ -176,7 +177,7 @@ body {
   margin: auto;
   text-align: center;
   font-family: montserrat;
-  color: rgb(46, 49, 216);
+  /* color: rgb(46, 49, 216); */
   border-radius: 5px;
   padding-top: 30px;
 }
@@ -310,6 +311,8 @@ a:hover {
   grid-template-columns: 580px 580px 55px;
   row-gap: 15px;
   column-gap: 30px;
+  padding-left: 60px;
+  color: black;
 }
 
 .item1 {
@@ -323,6 +326,16 @@ a:hover {
   background: #fff;
   border-radius: 12px;
 }
+
+/* .span1 {
+  display: flex;
+  justify-content: flex-start;
+}
+.span2 {
+  display: flex;
+  justify-content: flex-start;
+} */
+
 .item2 {
   /* border: 2px solid black; */
   grid-row: 1/3;
@@ -333,6 +346,7 @@ a:hover {
   box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
   background: #fff;
   border-radius: 12px;
+  text-align: center;
 }
 
 .item3 {
