--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -309,42 +309,33 @@ a:hover {
 .containerGrid {
   padding: 1% 10% 1% 10%;
   display: grid;
-  grid-template-rows: minmax(auto, 340px) minmax(auto, 130px);
+  grid-template-rows: minmax(auto, 340px) minmax(auto, 130px) 1fr;
   grid-template-columns: 1fr 1fr;
   row-gap: 15px;
   column-gap: 30px;
 }
 
-.item1, .item2  {
+.item1,
+.item2 {
   grid-row: 1/2;
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 30px 40px 30px 40px;
+  padding: 20px 40px 30px 40px;
   box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
   background: #fff;
   border-radius: 12px;
+  color: rgb(45, 112, 133);
 }
 
-.item2{
+.item2 {
   grid-row: 1/3;
 }
 
 #root > div > main > div > div.containerGrid > div.item1 > div * {
-  padding: 1.6%;
+  padding: 1.2%;
   margin: 0;
 }
-/* .item2 {
-  border: 2px solid black;
-  grid-row: 1/3;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 30px 40px 30px 40px;
-  box-shadow: 0px 8px 60px -10px rgba(147, 171, 189, 0.6);
-  background: #fff;
-  border-radius: 12px;
-} */
 
 .item3 {
   grid-row: 2/3;
@@ -361,7 +352,6 @@ a:hover {
 }
 
 .item4 {
-  /* border: 2px solid black; */
   grid-row: 4;
   grid-column: 1/3;
   border-radius: 25px;
