--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -334,6 +334,9 @@ a:hover {
   margin: 0 0 0 0 !important;
   padding: 0.5% 0 0 0 !important;
 }
+.item1 > div > h5 > ul > li::marker{
+  color: white;
+}
 
 .item1 > div > h5 > ul > li > img {
   padding: 0 0 0 0 !important;
@@ -361,4 +364,14 @@ a:hover {
 .item4 {
   width: 100%;
   padding: 2% 10% 2% 10%;
+}
+
+h2{
+  color: black;
+}
+
+.item2 {
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
