--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -376,3 +376,10 @@ a:hover {
   position: relative;
   left: 540px;
 }
+
+#editform {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
