--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Amaranth&family=Merriweather:wght@300&family=Overpass:ital@1&display=swap');
+
 #root {
   width: 100vw;
   height: 100vh;
@@ -262,7 +264,15 @@ a:hover {
 
   font-size: larger;
 
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Amaranth;
+}
+
+#quote-font {
+  font-family: Overpass;
+}
+
+#merri-font {
+  font-family: Merriweather;
 }
 
 #LoginQ span {
