--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -280,16 +280,17 @@ a:hover {
 }
 
 #bk-text {
-  text-align: center;
-  position: absolute;
-  top: 20vh;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(48, 209, 245);
+  /* text-align: center; */
+  /* position: absolute; */
+  /* top: 19vh; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  /* color: rgb(48, 209, 245); */
+  color: black;
 
-  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);
+  /* text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7); */
 
-  font-size: larger;
+  /* font-size: larger; */
 
   font-family: Amaranth;
 }
