update matches font

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -295,6 +295,10 @@ a:hover {
   font-family: Amaranth;
 }
 
+#all-font {
+  font-family: Amaranth;
+}
+
 #quote-font {
   font-family: Overpass;
 }
