--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -696,3 +696,9 @@ a:hover {
     overflow: hidden;
   }
 }
+
+#modalB {
+  display: flex;
+  justify-content: center;
+/* align-items: center; */
+}
