--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -426,9 +426,10 @@ a:hover {
 }
 
 .modalContainer {
-  -webkit-transform: scale(0.63);
-  -moz-transform: scale(0.63);
-  transform: scale(0.63);
+  padding: 16% 0 4% 0;
+  -webkit-transform: scale(0.60);
+  -moz-transform: scale(0.60);
+  transform: scale(0.60);
   display: flex;
   justify-content: center;
 }
@@ -567,10 +568,12 @@ a:hover {
   }
 
   .item4 {
-    padding-top: 20px;
+    padding: 1% 10% 1% 10%;
+    /* padding-top: 20px;
     overflow: hidden;
-    margin: auto;
+    margin: auto; */
   }
+  
 }
 
 @media screen and (max-width: 780px) {
